# clizzard

./: .gitignore  pyproject.toml
src/clizzard/: __init__.py  command.py  option.py  positional.py
tests/: test_command.py  test_option.py  test_positional.py
